# majra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmark-rustvcyrius2.md  benchmarks.md  cyrb.toml  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: bench_all.bcyr  concurrent.rs  dag.rs  ipc_envelope.rs  live_io.rs  pubsub.rs
docs/: doc-health.md  roadmap.md
docs/architecture/: 001-cyrius-compiler-quirks.md  README.md  overview.md
docs/development/: cyrius-quirks.md  dependency-watch.md  roadmap.md  semver.md  state.md  threat-model.md
docs/development/issues/: 2026-06-23-ratelimit-fn-collision-namespace.md
docs/guides/: migration-ifran.md  migration-secureyeoman.md  testing.md
examples/: managed_queue.cyr  managed_queue.rs  pubsub_tiers.cyr  pubsub_tiers.rs
fuzz/: Cargo.toml  fuzz_heartbeat.fcyr  fuzz_pubsub.fcyr  fuzz_queue.fcyr
rust-old/: Cargo.toml  bench-history.csv  benchmarks.md
rust-old/benches/: queue.rs
rust-old/examples/: managed_queue.rs
rust-old/fuzz/fuzz_targets/: fuzz_heartbeat.rs  fuzz_pubsub.rs  fuzz_queue.rs
rust-old/src/: error.rs  fleet.rs  lib.rs  logging.rs  namespace.rs  ratelimit.rs  redis_backend.rs  ws.rs
rust-old/supply-chain/: config.toml
rust-old/tests/: soak.rs
scripts/: bench-history.sh  version-bump.sh
src/: admin.cyr  barrier.cyr  barrier.rs  counter.cyr  dag.cyr  dag.rs  envelope.cyr  envelope.rs  error.cyr  error.rs  fleet.cyr  heartbeat.cyr  heartbeat.rs  ipc.cyr  ipc.rs  ipc_encrypted.cyr  ipc_encrypted.rs  lib.rs  logging.rs  main.cyr  metrics.cyr  metrics.rs  namespace.cyr  namespace.rs  patra_queue.cyr  postgres_backend.cyr  postgres_backend.rs  pubsub.cyr  pubsub.rs  queue.cyr  queue.rs  quic.rs  ratelimit.cyr  ratelimit.rs  redis_backend.cyr  redis_backend.rs  relay.cyr  relay.rs  signed_envelope.cyr  transport.cyr  (+3 more)
supply-chain/: audits.toml  config.toml
tests/: integration.rs  repro_aaw_crash.cyr  soak.rs  test.sh  test_backends.cyr  test_backends.tcyr  test_core.cyr  test_core.tcyr  test_live.cyr  test_patra_queue.tcyr
tests/soak/: README.md  soak_heartbeat.cyr  soak_pubsub.cyr  soak_queue.cyr  soak_relay.cyr
