[package]
name = "majra"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "Distributed queue & multiplex engine — pub/sub, priority queues, relay, IPC, heartbeat, and rate limiting for Rust"
homepage = "https://github.com/MacCracken/majra"
repository = "https://github.com/MacCracken/majra"
readme = "README.md"
documentation = "https://docs.rs/majra"
keywords = ["queue", "pubsub", "relay", "ipc", "distributed"]
categories = ["asynchronous", "concurrency", "network-programming"]
exclude = [".claude/", "target/"]

[features]
default = ["pubsub", "queue", "relay", "heartbeat"]
pubsub = []
queue = []
relay = []
ipc = []
ipc-encrypted = ["ipc", "dep:ring"]
heartbeat = []
ratelimit = []
barrier = []
dag = ["queue"]
sqlite = ["dep:rusqlite"]
logging = ["dep:tracing-subscriber"]
fleet = ["queue", "heartbeat"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
redis-backend = ["dep:redis", "dep:futures-util"]
ws = ["pubsub", "dep:tokio-tungstenite"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "relay"]
prometheus = ["dep:prometheus"]
full = ["pubsub", "queue", "relay", "ipc", "ipc-encrypted", "heartbeat", "ratelimit", "barrier", "dag", "sqlite", "logging", "prometheus", "fleet", "redis-backend", "quic", "postgres", "ws"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "net", "macros", "rt", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
prometheus = { version = "0.14", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "aio"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
ring = { version = "0.17", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", features = ["ring"], default-features = false, optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "pubsub"
harness = false
required-features = ["pubsub"]

[[bench]]
name = "queue"
harness = false
required-features = ["queue"]

[[bench]]
name = "concurrent"
harness = false
required-features = ["queue", "heartbeat", "ratelimit", "relay", "barrier"]

[[bench]]
name = "ipc_envelope"
harness = false

[[bench]]
name = "dag"
harness = false
required-features = ["dag"]

[[bench]]
name = "live_io"
harness = false

[[example]]
name = "managed_queue"
required-features = ["queue", "ratelimit"]

[[example]]
name = "pubsub_tiers"
required-features = ["pubsub"]
